--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "semantic-release": "^24.2.6",
     "tslib": "2.8.1",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.48.0"
+    "typescript-eslint": "8.48.0",
+    "undici": "^7.16.0"
   }
 }
